# template_cookie_uv

./: README.md  cookiecutter.json
.github/actions/deploy-docker-local/: action.yml
.github/actions/python-build-test/: action.yml
.github/workflows/: build-and-deploy.yml  ci-cd.yml
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/actions/build-to-ghcr/: action.yml
{{cookiecutter.project_slug}}/.github/actions/deploy-docker-local/: action.yml
{{cookiecutter.project_slug}}/.github/actions/python-build-test/: action.yml
{{cookiecutter.project_slug}}/.github/workflows/: build-and-deploy.yml  ci-cd.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: utils.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/config/: logs.py  schemas.py  settings.py
{{cookiecutter.project_slug}}/tests/: test_settings.py
