[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = [{ name = "nicholas" , email = "nicholasvachon@hotmail.com"}]
requires-python = ">={{cookiecutter.python_version}}"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]


[tool.hatch.build.targets.wheel]
    packages = ["src/{{cookiecutter.package_name}}"]
